# laser_burner

./: .gitignore  .gitmodules  CMakeLists.txt  burn_image.py  exercise_protocol.py  gradient.pgm  laser-burner-controller.py  make-gradient-img.cpp  make-gradient-img.py  pipe-reader.py  serial_test.cpp  serial_test.py
imageburner/: __init__.py  burnerconnection.py  burnerprotocol.py  imageburner.py  imageformatter.py
sketch/: burner_protocol.h  burner_protocol_handler.cpp  burner_protocol_handler.h  head_motor.h  head_motors.h  image_piece.cpp  image_piece.h  image_receiver.cpp  image_receiver.h  image_router.cpp  image_router.h  laser.cpp  laser.h  laser_burner.cpp  laser_burner.h  laser_head.cpp  laser_head.h  serial_interface.cpp  serial_interface.h  sketch.ino
test/: burner_image.cpp  burner_image.h  burner_protocol_test.cpp  burner_script_to_image_burner_test.cpp  exec_process.cpp  exec_process.h  head_motor.cpp  head_motors.cpp  image_builder.cpp  image_builder.h  image_building_burner.cpp  image_building_burner.h  image_receiver_test.cpp  laser.cpp  laser_burner_sim.cpp  laser_burner_sim_test.py  mock_serial_interface.cpp  mock_serial_interface.h  serial_interface.cpp  serial_port.cpp  serial_port.h  serial_port_test.h  string_utils.h  strings.h
